--- a/settings.gradle
+++ b/settings.gradle
@@ -177,3 +177,5 @@ include 'wokstore-stock'
 include 'menlook'
 include 'menlook-stock'
 include 'linoricci-purchase'
+include 'anatwine'
+include 'pavinGroup'
