--- a/linoricci-purchase/build.gradle
+++ b/linoricci-purchase/build.gradle
@@ -5,7 +5,8 @@ dependencies {
             "org.apache.httpcomponents:httpclient:4.5",
             project(':project-common'),
             project(':openapi-ice'),
-            project(':iog-common-product')
+            project(':iog-common-product'),
+            project(':project-dao')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
