--- a/linoricci/build.gradle
+++ b/linoricci/build.gradle
@@ -19,6 +19,7 @@ dependencies {
             "org.jdom:jdom:2.0.2",
             "dom4j:dom4j:1.6.1",
             project(':project-common'),
-            project(':iog-common-product')
+            project(':iog-common-product'),
+            project(':project-dao')
     )
 }
