--- a/menlook-stock/build.gradle
+++ b/menlook-stock/build.gradle
@@ -14,7 +14,7 @@ dependencies {
             project(':project-common'),
             project(':project-dao'),
             project(':iog-common-product'),
-            project(':openapi-ice')
+            project(':iog-sop')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
