--- a/linoricci-stock/src/main/resources/conf.properties
+++ b/linoricci-stock/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
 #供应商ID
 #supplierId=2015091701503
-supplierId=201511261622
+supplierId=2015113001685
 url=http://79.61.138.184/ws_sito/ws_sito_p15.asmx/
