--- a/linoricci-stock/build.gradle
+++ b/linoricci-stock/build.gradle
@@ -1,17 +1,41 @@
 
+
+
+
+def propertyPath =    "$buildDir/libs/conf"
+
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
-            "commons-httpclient:commons-httpclient:3.1",
-            "org.apache.httpcomponents:httpclient:4.1.1",
-            "org.projectlombok:lombok:1.14.8",
-            "commons-net:commons-net:1.4.1",
-            "org.jdom:jdom:2.0.2",
-            "com.enterprisedt:edtFTPj:1.5.3",
-            "org.jdom:jdom:2.0.2",
-            "dom4j:dom4j:1.6.1",
-            project(':openapi-ice'),
+            "org.mybatis:mybatis:3.2.2",
+            "org.mybatis:mybatis-spring:1.2.0",
+            "mysql:mysql-connector-java:5.1.21",
+            "commons-dbcp:commons-dbcp:1.4",
             project(':project-common'),
-            project(':iog-common-product')
+            project(':project-dao'),
+            project(':iog-common-product'),
+            project(':openapi-ice'),
     )
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+
+
+}
+
+jar {
+
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
+
+    def manifestCp = configurations.compile.files.collect  {
+
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.linoricci.stock.LinoricciStockImp'
+
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+    }
 }
