--- a/linoricci-stock/build.gradle
+++ b/linoricci-stock/build.gradle
@@ -15,3 +15,20 @@ dependencies {
             project(':iog-common-product')
     )
 }
+
+jar {
+
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
+
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.linoricci.stock.LinoricciStockImp'
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+    }
+}
