--- a/settings.gradle
+++ b/settings.gradle
@@ -168,7 +168,7 @@ include 'havok'
 include 'havok-stock'
 include 'biancabianca'
 include 'biancabianca-stock'
-//include 'iog-order-dubbo'
+include 'iog-order-dubbo'
 
 include 'Della'
 include 'Della-stock'
