--- a/settings.gradle
+++ b/settings.gradle
@@ -179,3 +179,6 @@ include 'menlook-stock'
 include 'linoricci-purchase'
 include 'anatwine'
 include 'pavinGroup'
+include 'efashion'
+include 'pavinGroup-stock'
+include 'efashion-stock'
