仅仅更新现有的商品

--- a/bagheera/src/main/resources/param.properties
+++ b/bagheera/src/main/resources/param.properties
@@ -2,3 +2,5 @@ path=/usr/local/app/bagheera/BagheeraBoutiqueLaso
 url=http://www.bagheeraboutique.com/public/BagheeraBoutiqueShangpin.xls
   #http://www.bagheeraboutique.com/en-US/home/shangpin
 supplierId=2015100701573
+
+day=90
