--- a/channeladvisor-purchase/src/main/resources/conf.properties
+++ b/channeladvisor-purchase/src/main/resources/conf.properties
@@ -1,14 +1,13 @@
-supplierId=2015100901577
+##2015100901577
+supplierId=20151029001029113
 supplierNo=??????
 
 createOrderUrl=https://api.channeladvisor.com/v1/Orders
 updateOrderUrl=https://api.channeladvisor.com/v1/Orders
 
-smtpHost=smtp.shangpin.com
-from=chengxu@shangpin.com
-fromUserPassword=shangpin001
-to=qiujunwei@shangpin.com
-toReebonz=lizhongren@shangpin.com
-subject=reebonz\u8BA2\u5355\u5F02\u5E38
-messageText=
-messageType=text/html;charset=utf-8
+startDateOfTemp=
+endDateOfTemp=
+wmsUrl=
+email=
+fromEmail=
+emailPass=
