--- a/levelgroup-purchase/src/main/resources/conf.properties
+++ b/levelgroup-purchase/src/main/resources/conf.properties
@@ -7,4 +7,6 @@ host=ftp.thelevelgroup-ftp.com
 port=21
 user=googlepla@thelevelgroup-ftp.com
 password=tlg2014!
-
+jobsSchedule=0 0/2 * * * ? 
+startDateOfTemp=
+endDateOfTemp=
