配置文件添加项目

--- a/settings.gradle
+++ b/settings.gradle
@@ -182,3 +182,16 @@ include 'pavinGroup'
 include 'efashion'
 include 'pavinGroup-stock'
 include 'efashion-stock'
+include 'gbEDS'
+include 'NugnesEDS'
+include 'wiseEDS'
+include 'rossanaNiccolai'
+include 'efashion-order'
+include 'gbEDS-order'
+include 'gbEDS-stock'
+include 'nugnes-order'
+include 'nugnes-stock'
+include 'rossanaNiccolai-order'
+include 'rossanaNiccolai-stock'
+include 'wise-order'
+include 'wise-stock'
