修改配置文件

--- a/levelgroup-purchase/src/main/resources/conf.properties
+++ b/levelgroup-purchase/src/main/resources/conf.properties
@@ -1,7 +1,8 @@
 #
 supplierId=2015092901551
-
-localFile=E:/1.txt
+supplierNo=S0000743
+localFile=/usr/local/apporder/levelgroup
+#localFile=E:/1.txt
 remoteFile=NovOrder.txt
 host=ftp.thelevelgroup-ftp.com
 port=21
