--- a/channeladvisor-purchase/src/main/resources/conf.properties
+++ b/channeladvisor-purchase/src/main/resources/conf.properties
@@ -1,5 +1,6 @@
-##2015100901577
-supplierId=20151029001029113
+#正式库#2015100901577
+#测试库#20151029001029113
+supplierId=2015100901577
 supplierNo=??????
 
 createOrderUrl=https://api.channeladvisor.com/v1/Orders
