--- a/channeladvisor-purchase/src/main/resources/conf.properties
+++ b/channeladvisor-purchase/src/main/resources/conf.properties
@@ -1,7 +1,7 @@
 #正式库#2015100901577
 #测试库#20151029001029113
 supplierId=2015100901577
-supplierNo=??????
+supplierNo=S0000505
 
 createOrderUrl=https://api.channeladvisor.com/v1/Orders
 updateOrderUrl=https://api.channeladvisor.com/v1/Orders
