--- a/cosentinoShop/src/main/resources/conf.properties
+++ b/cosentinoShop/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
-
-supplierId=201512101616
+#测试库#201512101616
+supplierId=2015121101695
 
 pullUrl=http://cosentinoshop.com/feeds/Shangpin_Tutti_EN.xml?empty_cache=
