reebonz接口更改，添加活动是否过期判断

--- a/reebonzWiki-order/src/main/resources/conf.properties
+++ b/reebonzWiki-order/src/main/resources/conf.properties
@@ -1,7 +1,7 @@
 supplierId=2015101001584
 supplierNo=S0000514
-lockStockUrl=http://ladon.titan.reebonz.com/api/eps_product_reservation
-unlockStockUrl=http://ladon.titan.reebonz.com/api/eps_product_reservation_confirmation
+lockStockUrl=http://api.reebonz.com/api/eps_product_reservation
+unlockStockUrl=http://api.reebonz.com/api/eps_product_reservation_confirmation
 pushOrderUrl=http://api.reebonz.com/eps/api/order
 username=shangpin
 password=y9LZhbx6VhfKzu/FCY3bHw==
