--- a/forzieri/src/main/resources/param.properties
+++ b/forzieri/src/main/resources/param.properties
@@ -19,3 +19,4 @@ time=60
 tokenurl=https://api.forzieri.com/v2/oauth/token
 #orderurl=https://api.forzieri.com/test/orders
 orderurl=https://api.forzieri.com/v2/orders
+day=90
