fratinardi fratinardi-stock

--- a/settings.gradle
+++ b/settings.gradle
@@ -202,3 +202,5 @@ include 'rossana'
 include 'rossana-stock'
 include 'coltorti-purchase'
 include 'pozzilei'
+include 'fratinardi'
+include 'fratinardi-stock'
