--- a/settings.gradle
+++ b/settings.gradle
@@ -202,6 +202,7 @@ include 'rossana'
 include 'rossana-stock'
 include 'coltorti-purchase'
 include 'pozzilei'
+include 'pozzilei-stock'
 include 'fratinardi'
 include 'fratinardi-stock'
 include 'tony-day-stock'
