--- a/casadei-stock/build.gradle
+++ b/casadei-stock/build.gradle
@@ -23,7 +23,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.woolrich.stock.WoolrichStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.casadei.stock.CasadeiStockImp'
         attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
