--- a/casadei/build.gradle
+++ b/casadei/build.gradle
@@ -1,14 +1,16 @@
+
 dependencies {
     compile(
             "org.mybatis:mybatis:3.2.2",
             "org.mybatis:mybatis-spring:1.2.0",
             "mysql:mysql-connector-java:5.1.21",
             "commons-dbcp:commons-dbcp:1.4",
+            "commons-net:commons-net:3.3",
             "net.sourceforge.javacsv:javacsv:2.0",
+            "com.google.code.gson:gson:2.3.1",
             project(':project-common'),
             project(':project-dao'),
-            project(':iog-common-product'),
-            project(':iog-sop')
+            project(':iog-common-product')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
@@ -17,13 +19,14 @@ jar {
 
     dependsOn copyToLib,copyResources, copyResourcesToClasses
     exclude ("**/*.properties")
+
     def manifestCp = configurations.compile.files.collect {
         File file = it
         "lib/${file.name}"
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.woolrich.stock.WoolrichStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.casadei.Startup'
         attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
