--- a/settings.gradle
+++ b/settings.gradle
@@ -208,3 +208,7 @@ include 'fratinardi-stock'
 include 'tony-day-stock'
 include 'woolrich'
 include 'woolrich-stock'
+include 'aspesi-stock'
+include 'aspesi'
+include 'casadei-stock'
+include 'casadei'
