--- a/woolrich-stock/src/main/resources/conf.properties
+++ b/woolrich-stock/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
-#
-#supplierId=2015121801704
-supplierId=201512211404
-path=E:/biancabianca
+supplierId=2015121801704
+#supplierId=201512231112
+path=/usr/local/app/woolrich
+#path=E:/biancabianca
 url=http://www.biancabianca.com/feed/TLG_partner_WPBAWO-EU_IT.txt
-#path=/usr/local/appstock/levelgroup/TLG_partner_weitzman_NL_STOCK.txt
+day=90
