--- a/aspesi-stock/src/main/resources/conf.properties
+++ b/aspesi-stock/src/main/resources/conf.properties
@@ -1,6 +1,4 @@
 #
-#supplierId=2015121801704
-supplierId=201512211404
-path=E:/biancabianca
+supplierId=2015121801705
+path=/usr/local/app/woolrich
 url=http://www.biancabianca.com/feed/TLG_partner_WPBAWO-EU_IT.txt
-#path=/usr/local/appstock/levelgroup/TLG_partner_weitzman_NL_STOCK.txt
