--- a/aspesi-stock/src/main/resources/sop.properties
+++ b/aspesi-stock/src/main/resources/sop.properties
@@ -9,7 +9,7 @@ APP_SECRET =7f5482beca184e28b86c0405113095a0
 
 url=http://www.biancabianca.com/feed/TLG_partner_WPBAWO-EU_IT.txt
 
-supplierId=201512211404
+supplierId=2015121801705
 
 
 
