--- a/aspesi/src/main/resources/conf.properties
+++ b/aspesi/src/main/resources/conf.properties
@@ -1,7 +1,5 @@
 #
-#supplierId=2015121801705
-supplierId=201512241128
-#path=/usr/local/app/woolrich
-path=E:/biancabianca
+supplierId=2015121801705
+path=/usr/local/app/aspesi
 url=http://www.biancabianca.com/feed/TLG_partner_Aspesi-EU_NL.txt
 day=90
