--- a/settings.gradle
+++ b/settings.gradle
@@ -215,3 +215,5 @@ include 'aspesi'
 include 'casadei-stock'
 include 'casadei'
 include 'Daniello'
+include 'atelier-ostore-stock'
+include 'atelier-ostore'
