--- a/woolrich/src/main/resources/conf.properties
+++ b/woolrich/src/main/resources/conf.properties
@@ -1,9 +1,6 @@
 supplierId=2015121801705
 path=usr/local/appfetch/woolrich
-#http://www.biancabianca.com/feed/TLG_partner_Casadei-EU_IT.txt,
-url=http://www.biancabianca.com/feed/TLG_partner_WPBAWO-EU_IT.txt,http://www.biancabianca.com/feed/TLG_partner_Aspesi-EU_NL.txt
+url=http://www.biancabianca.com/feed/TLG_partner_WPBAWO-EU_IT.txt,http://www.biancabianca.com/feed/TLG_partner_Aspesi-EU_NL.txt,http://www.biancabianca.com/feed/TLG_partner_Casadei-EU_IT.txt
 day=90
-#,casadei
-brand=woolrich,aspesi
-#,http://www.casadei.com/dw/shop/v15_8/products/;05
-detailurls=http://www.woolrich.eu/dw/shop/v15_8/products/;07,http://www.aspesi.com/dw/shop/v15_8/products/;02
+brand=woolrich,aspesi,casadei
+detailurls=http://www.woolrich.eu/dw/shop/v15_8/products/;07,http://www.aspesi.com/dw/shop/v15_8/products/;02,http://www.casadei.com/dw/shop/v15_8/products/;05
