brunarosso 更改更新库存机制 如果连接不上 持续调用五次 五次后 还不行 发邮件 不在调用 不更新数据库库存 待下一个小时

--- a/brunarosso/src/main/resources/param.properties
+++ b/brunarosso/src/main/resources/param.properties
@@ -4,3 +4,4 @@ latestStockPath=E:/latestXml.txt
 localFilePath = E:/stockDownload/
 testFilePath=E:/TestFtpDowload/
 supplierId = 2015091801507
+day=90
