--- a/brunarosso-stock/src/main/resources/sop.properties
+++ b/brunarosso-stock/src/main/resources/sop.properties
@@ -7,6 +7,8 @@ APP_KEY=34ba9613f2544c279a7523d015184b1e
 #supplier secret
 APP_SECRET =43e578550e9047b5936f7bc44876061d
 
+email=qiujunwei@shangpin.com,lizhongren@shangpin.com
+
 
 
 
