--- a/fratinardi-stock/build.gradle
+++ b/fratinardi-stock/build.gradle
@@ -10,7 +10,7 @@ dependencies {
             project(':project-common'),
             project(':project-dao'),
             project(':iog-common-product'),
-            project(':iog-sop')
+            project(':iog-sop'),
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
