--- a/brunarosso-stock/src/main/resources/param.properties
+++ b/brunarosso-stock/src/main/resources/param.properties
@@ -1,3 +1,4 @@
 localFilePath = /usr/local/app/brunarosso/file
 path=/usr/local/app/brunarosso/file
 supplierId = 2015091801507
+email=qiujunwei@shangpin.com,lizhongren@shangpin.com
