--- a/settings.gradle
+++ b/settings.gradle
@@ -217,3 +217,5 @@ include 'casadei'
 include 'Daniello'
 include 'atelier-ostore-stock'
 include 'atelier-ostore'
+include 'russoCapri'
+include 'russoCapri-stock'
