--- a/channeladvisor-purchase/src/main/resources/conf.properties
+++ b/channeladvisor-purchase/src/main/resources/conf.properties
@@ -10,5 +10,5 @@ startDateOfTemp=
 endDateOfTemp=
 wmsUrl=
 email=
-fromEmail=
-emailPass=
+fromEmail=chengxu@shangpin.com
+emailPass=lizhongren@shangpin.com,lubaijiang@shangpin.com
