--- a/filippo/src/main/resources/param.properties
+++ b/filippo/src/main/resources/param.properties
@@ -1,5 +1,5 @@
-#path=/usr/local/app/filippo/filippo
-path=F:/filippo
+path=/usr/local/app/filippo/filippo
+#path=F:/filippo
 url=http://stat.filippomarchesani.net:2060/gw/collect.php/?p=aW5102cn6&nohtml=csv&o=shangA15&q=getall&w=ha,http://stat.filippomarchesani.net:2060/gw/collect.php/?p=aW5102cn6&nohtml=csv&o=shangP15&q=getall&w=ha
 picurl=http://p.filmar.eu:2060/?
 supplierId=2015102001622
