多数据源配置

--- a/settings.gradle
+++ b/settings.gradle
@@ -220,3 +220,5 @@ include 'atelier-ostore-stock'
 include 'atelier-ostore'
 include 'russoCapri'
 include 'russoCapri-stock'
+include 'project-muldatass-dao'
+include 'iog-common-product2'
