--- a/levelgroup/src/main/resources/conf.properties
+++ b/levelgroup/src/main/resources/conf.properties
@@ -3,3 +3,4 @@ supplierId=2015092901551
 
 path=E:/biancabianca/TLG_partner_weitzman_NL.txt
 url=http://www.biancabianca.com/feed/TLG_partner_weitzman_NL.txt
+day=90
