--- a/settings.gradle
+++ b/settings.gradle
@@ -172,6 +172,7 @@ include 'iog-order-dubbo'
 
 include 'Della'
 include 'Della-stock'
+include 'Della-purchase'
 include 'wokstore'
 include 'wokstore-stock'
 include 'menlook'
@@ -219,3 +220,5 @@ include 'atelier-ostore-stock'
 include 'atelier-ostore'
 include 'russoCapri'
 include 'russoCapri-stock'
+include 'project-muldatass-dao'
+include 'iog-common-product2'
