--- a/settings.gradle
+++ b/settings.gradle
@@ -447,3 +447,5 @@ include 'russoCapri'
 include 'russoCapri-stock'
 include 'project-muldatass-dao'
 include 'iog-common-product2'
+include 'Mengotti'
+include 'Mengotti-stock'
