--- a/settings.gradle
+++ b/settings.gradle
@@ -449,3 +449,6 @@ include 'project-muldatass-dao'
 include 'iog-common-product2'
 include 'Mengotti'
 include 'Mengotti-stock'
+include 'inviqa'
+include 'inviqa-stock'
+include 'efashion-order'
