--- a/Della-purchase/src/main/resources/conf.properties
+++ b/Della-purchase/src/main/resources/conf.properties
@@ -3,9 +3,10 @@
 supplierId=2015112001671
 supplierNo=S0000604
 #localFile=E:/Della.txt
-localFile=/usr/local/apporder/Della/1.txt
-remoteFile=DecOrder.csv
-host=ftp://92.223.134.2/MOSU/
+localFile=/usr/local/apporder/Della/a.csv
+remoteFile=JanOrder.csv
+host=ftp://92.223.134.2
+path=/MOSU/Orders/Save
 port=21
 user=mosuftp
 password=inter2015£
