--- a/Della-purchase/build.gradle
+++ b/Della-purchase/build.gradle
@@ -3,9 +3,12 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
             "com.google.code.gson:gson:2.2.2",
+            "commons-dbcp:commons-dbcp:1.4",
+            "net.sourceforge.javacsv:javacsv:2.0",
             project(':project-common'),
             project(':openapi-ice'),
-            project(':iog-common-product')
+            project(':iog-common-product'),
+            "commons-net:commons-net:3.3"
     )
 }
 
