levelgroup订单逻辑修改

--- a/levelgroup-purchase/src/main/resources/conf.properties
+++ b/levelgroup-purchase/src/main/resources/conf.properties
@@ -2,12 +2,14 @@
 supplierId=2015092901551
 supplierNo=S0000743
 #localFile=E:/1.txt
-localFile=/usr/local/apporder/levelgroup
-remoteFile=NovOrder.txt
+localFile=/usr/local/apporder/levelgroup/1.txt
+remoteFile=JanOrder.txt
 host=ftp.thelevelgroup-ftp.com
 port=21
-user=googlepla@thelevelgroup-ftp.com
-password=tlg2014!
+path=/import
+user=shangpin@thelevelgroup-ftp.com
+password=TLGshangpin2016
 jobsSchedule=0 0/2 * * * ? 
+upLoadSchedule=0 0 1 * * ? 
 startDateOfTemp=
 endDateOfTemp=
