daniello拉去产品 更新库存

--- a/settings.gradle
+++ b/settings.gradle
@@ -217,6 +217,7 @@ include 'aspesi'
 include 'casadei-stock'
 include 'casadei'
 include 'Daniello'
+include 'Daniello-stock'
 include 'atelier-ostore-stock'
 include 'atelier-ostore'
 include 'russoCapri'
