--- a/hottestFootwear-stock/build.gradle
+++ b/hottestFootwear-stock/build.gradle
@@ -7,7 +7,8 @@ dependencies {
             "net.sourceforge.javacsv:javacsv:2.0",
             project(':openapi-ice'),
             project(':iog-common-product'),
-            "commons-net:commons-net:3.3"
+            "commons-net:commons-net:3.3",
+			project(':iog-sop')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
