--- a/leam/src/main/resources/conf.properties
+++ b/leam/src/main/resources/conf.properties
@@ -3,3 +3,4 @@ supplierId=NEW2015081701441
 
 token=http://188.165.92.169/modules/api/v2/getToken/
 skuUrl=http://188.165.92.169/modules/api/v2/stock/
+day=90
