--- a/openapi-ice/src/main/resources/openice.properties
+++ b/openapi-ice/src/main/resources/openice.properties
@@ -3,3 +3,4 @@ wmsUrl=@db.wmsUrl@
 fromEmail=chengxu@shangpin.com
 emailPass=shangpin001
 email=qiujunwei@shangpin.com,lizhongren@shangpin.com
+delay=20
