--- a/settings.gradle
+++ b/settings.gradle
@@ -174,6 +174,7 @@ include 'iog-order-dubbo'
 include 'Della'
 include 'Della-stock'
 include 'Della-purchase'
+include 'Della-HK-purchase'
 include 'wokstore'
 include 'wokstore-stock'
 include 'menlook'
