--- a/atelier-ostore/src/main/resources/conf.properties
+++ b/atelier-ostore/src/main/resources/conf.properties
@@ -1,3 +1,4 @@
-supplierId=201601141135
+supplierId=2015081401431
 url=http://95.227.147.192/WS_SITO/WS_SITO_P15.ASMX/
 day=90
+oldurl=http://b2b.officinastore.com/Scambio/Atelier/Shangpin/shangpin.csv
