--- a/levelgroup-purchase/src/main/resources/conf.properties
+++ b/levelgroup-purchase/src/main/resources/conf.properties
@@ -3,10 +3,12 @@ supplierId=2015092901551
 supplierNo=S0000743
 #localFile=E:/1.txt
 localFile=/usr/local/apporder/levelgroup/1.txt
+localFile2=/usr/local/apporder/levelgroup/2.txt
 remoteFile=JanOrder.txt
 host=ftp.thelevelgroup-ftp.com
 port=21
-path=/import
+path=/import/orders
+path2=/import/updates
 user=shangpin@thelevelgroup-ftp.com
 password=TLGshangpin2016
 jobsSchedule=0 0/2 * * * ? 
