--- a/atelier-ostore/build.gradle
+++ b/atelier-ostore/build.gradle
@@ -28,7 +28,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.linoricci.StartUp'
+        attributes 'Main-Class': 'com.shangpin.iog.ostore.StartUp'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
