--- a/vela/build.gradle
+++ b/vela/build.gradle
@@ -1,29 +1,25 @@
 
-
-
-
-
-
-
 dependencies {
     compile(
-
+            "commons-httpclient:commons-httpclient:3.1",
+            "org.mybatis:mybatis:3.2.2",
+            "org.mybatis:mybatis-spring:1.2.0",
+            "mysql:mysql-connector-java:5.1.21",
+            "commons-dbcp:commons-dbcp:1.4",
+            "org.springframework:spring-jdbc:${springVersion}",
+            "com.github.pagehelper:pagehelper:3.7.3",
             "com.google.code.gson:gson:2.3.1",
             project(':project-common'),
+            project(':project-dao'),
             project(':iog-common-product')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
-
 }
 
 jar {
-
-    dependsOn copyToLib
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-
-//    }
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -32,8 +28,7 @@ jar {
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.vela.StartSkuJob'
-//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. conf ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
 
