--- a/atelier-ostore-stock/build.gradle
+++ b/atelier-ostore-stock/build.gradle
@@ -6,14 +6,9 @@ def propertyPath =    "$buildDir/libs/conf"
 
 dependencies {
     compile(
-            "org.mybatis:mybatis:3.2.2",
-            "org.mybatis:mybatis-spring:1.2.0",
-            "mysql:mysql-connector-java:5.1.21",
-            "commons-dbcp:commons-dbcp:1.4",
-            project(':project-common'),
-            project(':project-dao'),
-            project(':iog-common-product'),
-            project(':openapi-ice'),
+       project(':project-common'),
+
+            project(':iog-sop')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -34,7 +29,7 @@ jar {
 
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.linoricci.stock.LinoricciStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.ostore.stock.OstoreStockImp'
 
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
