--- a/spinnaker-order/build.gradle
+++ b/spinnaker-order/build.gradle
@@ -26,7 +26,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.reebonz.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.spinnaker.Startup'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
