--- a/paoloFirillo/src/main/resources/conf.properties
+++ b/paoloFirillo/src/main/resources/conf.properties
@@ -1,4 +1,2 @@
-supplierId=2015121801705
-path=/usr/local/appfetch/woolrich
-url=http://www.biancabianca.com/feed/TLG_partner_WPBAWO-EU_IT.txt,http://www.biancabianca.com/feed/TLG_partner_Aspesi-EU_NL.txt,http://www.biancabianca.com/feed/TLG_partner_Casadei-EU_IT.txt
+supplierId=201601201059
 day=90
