--- a/russoCapri/src/main/resources/conf.properties
+++ b/russoCapri/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
 #test
-supplierId=2015091701503
+supplierId=201601201546
 #supplierId=2015113001685
 url=http://2.118.242.149/ws_sito/ws_sito_p15.asmx/
 day=90
