修改订单退款逻辑 增加异常处理

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ ext {
     slf4j_version='1.7.12'
     log4j_version='1.2.17'
     jedis_version='2.6.2'
+    resteasy_version='3.0.7.Final'
 }
 
 
