--- a/iog-facade/build.gradle
+++ b/iog-facade/build.gradle
@@ -3,6 +3,18 @@
 dependencies {
 
 
+    compile(
+
+            "org.jboss.resteasy:resteasy-jaxrs:${resteasy_version}",
+            "org.jboss.resteasy:resteasy-client:${resteasy_version}",
+            "org.jboss.resteasy:resteasy-jackson-provider:${resteasy_version}",
+            "org.jboss.resteasy:resteasy-jaxb-provider:${resteasy_version}",
+            "org.jboss.resteasy:resteasy-jdk-http:${resteasy_version}",
+            "com.alibaba:dubbo:2.8.4",
+
+
+    )
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
 }
