--- a/newMenlook-stock/src/main/resources/conf.properties
+++ b/newMenlook-stock/src/main/resources/conf.properties
@@ -1,3 +1,3 @@
 
-supplierId=201512311013
+supplierId=2015112301672
 product_availability_url=http://www.menlook.com/dw/shop/v15_9/products/@id@/availability?inventory_ids=@inventory_ids@&locale=@locale@&client_id=c8f0a7ef-dee7-4b94-8e5c-4ee108e61e26
