--- a/newMenlook/src/main/resources/conf.properties
+++ b/newMenlook/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
 
-supplierId=201512311013
+supplierId=2015112301672
 day=90
 login_url=https://staging.menlook.com/dw/shop/v15_9/account/login?client_id=c8f0a7ef-dee7-4b94-8e5c-4ee108e61e26
 
