--- a/Della/build.gradle
+++ b/Della/build.gradle
@@ -7,6 +7,7 @@ dependencies {
             "net.sourceforge.javacsv:javacsv:2.0",
             project(':project-common'),
             project(':iog-common-product'),
+            "commons-net:commons-net:3.3"
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
