--- a/spinnaker-order/src/main/resources/conf.properties
+++ b/spinnaker-order/src/main/resources/conf.properties
@@ -1,2 +1,6 @@
 startDateOfTemp=
 endDateOfTemp=
+checkoutOrderSchedule=0 0/2 * * * ?
+confirmOrderSchedule=0 0/2 * * * ?
+shipOrderSchedule=0 0 1 * * ?
+invoiceSchedule=0 0 1 * * ?
