--- a/coltorti-purchase/build.gradle
+++ b/coltorti-purchase/build.gradle
@@ -25,7 +25,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.ColtortiStartup'
+        attributes 'Main-Class': 'com.shangpin.iog.coltorti.Startup'
         attributes 'Class-Path': '. ./conf/ '+ manifestCp
     }
 }
