--- a/Della-purchase/src/main/resources/conf.properties
+++ b/Della-purchase/src/main/resources/conf.properties
@@ -1,15 +1,22 @@
 #
-#supplierId=2015092800206
 supplierId=2015112001671
 supplierNo=S0000604
 #localFile=E:/Della.txt
-localFile=/usr/local/apporder/Della/a.csv
+localFile=/usr/local/apporder/Della/a.txt
 remoteFile=JanOrder.csv
-host=ftp://92.223.134.2
-path=/MOSU/Orders/Save
-port=21
-user=mosuftp
-password=inter2015£
-jobsSchedule=0 0/2 * * * ? 
+#host=ftp://92.223.134.2
+host=49.213.13.167
+#path=/MOSU/Orders/Save
+path=/home/apiftp
+#port=21
+port=60021
+#user=mosuftp
+user=apiftp
+#password=inter2015£
+password=api@888
+jobsSchedule=0 0/2 * * * ?
+upLoadSchedule=0 0 1 * * ? 
 startDateOfTemp=
 endDateOfTemp=
+startDate=
+endDate=
