修改拉取产品为新的逻辑

--- a/bernardelli/build.gradle
+++ b/bernardelli/build.gradle
@@ -22,7 +22,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.bernardelli.StartUp'
+        attributes 'Main-Class': 'com.shangpin.iog.bernardelli.Startup'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
