--- a/menlook/src/main/resources/conf.properties
+++ b/menlook/src/main/resources/conf.properties
@@ -1,3 +1,4 @@
 path=/usr/local/app/menlook/menlook
 url=http://admin.menlook.com/ftp/catalogue/us/catalogueCompletLengow.csv
 supplierId=2015112301672
+day=90
