--- a/monnierfreres/src/main/resources/param.properties
+++ b/monnierfreres/src/main/resources/param.properties
@@ -1,3 +1,4 @@
 path=/usr/local/app/monnierfreres/monnierfreres
-url=http://prod.monnierfreres.com/media/lengow/default/lengow_feed.csv
+url=http://prod.monnierfreres.eu/media/lengow/eu_en/lengow_feed.csv
 supplierId=2015100401556
+day=90
