--- a/paoloFirillo/build.gradle
+++ b/paoloFirillo/build.gradle
@@ -19,7 +19,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.woolrich.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.paoloFirillo.StartUp'
         attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
