--- a/efashion/src/main/resources/conf.properties
+++ b/efashion/src/main/resources/conf.properties
@@ -1,2 +1,4 @@
-supplierId=2015120214520
-url=http://demo-efashion.edstema.it/api/v3.0/products?storeCode=DW3LT
+supplierId=2015111001657
+url=http://api.gebnegozi.com/api/v2/all/products/info.json?storeCode=DW3LT
+max=500
+day=90
