--- a/efashion-stock/src/main/resources/conf.properties
+++ b/efashion-stock/src/main/resources/conf.properties
@@ -1,2 +1,4 @@
-supplierId=2015120214520
-stockUrl=http://demo-efashion.edstema.it/api/v3.0/skus/stock?storeCode=DW3LT
+supplierId=2015111001657
+url=http://api.gebnegozi.com/api/v2/all/sku/stock.json?storeCode=DW3LT
+max=500
+day=90
