--- a/efashion-order/build.gradle
+++ b/efashion-order/build.gradle
@@ -25,7 +25,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.reebonz.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.efashion.Startup'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
