--- a/project-common/src/main/resources/log4j.properties
+++ b/project-common/src/main/resources/log4j.properties
@@ -1,11 +1,11 @@
 #root
-log4j.rootLogger=WARN, spring
+log4j.rootLogger=WARN,file, spring
 log4j.appender.spring=org.apache.log4j.ConsoleAppender
 log4j.appender.spring.layout=org.apache.log4j.PatternLayout
 log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
 
 #通用日志配置
-log4j.rootCategory=ERROR, file
+
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.Encoding=UTF-8
 log4j.appender.file.File=openapi/logs.log
@@ -23,7 +23,7 @@ log4j.logger.info=INFO, info
 #规定每天产生日志的格式
 log4j.appender.info=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.info.Encoding=UTF-8
-log4j.appender.info.File=openapi/info.log
+log4j.appender.info.File=log/project-info.log
 log4j.appender.info.Append=true
 log4j.appender.info.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.info.MaxFileSize=1MB
@@ -38,7 +38,7 @@ log4j.logger.error=ERROR, error
 #规定每天产生日志的格式
 log4j.appender.error=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.error.Encoding=UTF-8
-log4j.appender.error.File=openapi/error.log
+log4j.appender.error.File=log/project-error.log
 log4j.appender.error.Append=true
 log4j.appender.error.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.error.MaxFileSize=1MB
