修改dellogliostore 程序被覆盖了　重新编写

--- a/settings.gradle
+++ b/settings.gradle
@@ -35,10 +35,9 @@ include 'iog-sop'
 
 include 'spinnaker-order'
 
-include 'giglio-stock'
 
-include 'monnierfreres-stock'
 
+include 'dellogliostore'
 
 
 
