--- a/paoloFirillo/src/main/resources/conf.properties
+++ b/paoloFirillo/src/main/resources/conf.properties
@@ -1,3 +1,6 @@
-supplierId=2016012101751
+#supplierId=2016012101751
+#test
+supplierId=201602021131
 day=90
-name=PAFYO,SAFYO
+name=PAFYO.csv,SAFYO.csv
+path=/usr/local/app/paoloFirillo/
