--- a/paoloFirillo/src/main/resources/conf.properties
+++ b/paoloFirillo/src/main/resources/conf.properties
@@ -1,6 +1,4 @@
-#supplierId=2016012101751
-#test
-supplierId=201602021131
+supplierId=2016012101751
 day=90
 name=PAFYO.csv,SAFYO.csv
 path=/usr/local/app/paoloFirillo/
