--- a/Mengotti-stock/build.gradle
+++ b/Mengotti-stock/build.gradle
@@ -27,7 +27,7 @@ jar {
 
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.mengotti.stock.StockClientImp'
+        attributes 'Main-Class': 'com.shangpin.iog.mengotti.GrapStock'
 
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
