--- a/Mengotti/src/main/resources/param.properties
+++ b/Mengotti/src/main/resources/param.properties
@@ -1,4 +1,4 @@
 path=/usr/local/app/forzieri/forzieri
-url=http://www.forzieri.com/productfeed/shangpin/data_feed.csv
+uri=http://mengotti-online.com/media/productsfeed/Shangpin.csv
 supplierId=2015103001637
 day=90
