--- a/glamestStock/build.gradle
+++ b/glamestStock/build.gradle
@@ -25,7 +25,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.channeladvisor.stock.GrabStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.glamestStock.GrapStock'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
