修改部分错误

--- a/spinnaker-order/src/main/resources/param.properties
+++ b/spinnaker-order/src/main/resources/param.properties
@@ -11,3 +11,14 @@ dBContext=Default
 key=8IZk2x5tVN
 startDateOfTemp=
 endDateOfTemp=
+
+
+
+smtpHost=smtp.shangpin.com
+from=chengxu@shangpin.com
+fromUserPassword=shangpin001
+to=lizhongren@shangpin.com
+toReebonz=lizhongren@shangpin.com
+subject=spinaaker order refund
+messageText=
+messageType=text/html;charset=utf-8
