--- a/ostore/build.gradle
+++ b/ostore/build.gradle
@@ -6,12 +6,9 @@
 
 dependencies {
     compile(
-            "org.mybatis:mybatis:3.2.2",
-            "org.mybatis:mybatis-spring:1.2.0",
-            "mysql:mysql-connector-java:5.1.21",
-            "commons-dbcp:commons-dbcp:1.4",
+
             project(':project-common'),
-            project(':project-dao'),
+
             project(':iog-common-product')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
@@ -21,7 +18,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 //    from {
 //        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 
@@ -35,7 +33,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.ostore.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '.  ' +  manifestCp
+        attributes 'Class-Path': '.  ./conf/ ' +  manifestCp
     }
 }
 
