--- a/Mengotti/src/main/resources/param.properties
+++ b/Mengotti/src/main/resources/param.properties
@@ -1,4 +1,5 @@
 path=/usr/local/app/forzieri/forzieri
 uri=http://mengotti-online.com/media/productsfeed/Shangpin.csv
-supplierId=2015103001637
+#test 2015103001637
+supplierId=2015120801691
 day=90
