--- a/efashion-order/src/main/resources/conf.properties
+++ b/efashion-order/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
 supplierId=2015111001657
 supplierNo=S0000593
-url=http://api.test.gebnegozi.com/api/v2/place/order.json?storeCode=DW3LT
+url=http://api.gebnegozi.com/api/v2/place/order.json?storeCode=DW3LT
 startDateOfTemp=
 endDateOfTemp=
