monti order bug

--- a/rossana/src/main/resources/conf.properties
+++ b/rossana/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
 #测试库#201512150928
 supplierId=2015121501699
-filepath=http://www.gasmy.com/feeds/Shangpin_EN.csv
+filepath=http://feeds.gasmy.it/Shangping_CE_EN.csv
 day=90
