--- a/linoricci/build.gradle
+++ b/linoricci/build.gradle
@@ -28,7 +28,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.linoricci.StartUp'
+        attributes 'Main-Class': 'com.shangpin.iog.linoricci.common.WS_Sito_P15'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
