修改原来老的一批拉取产品的供货商门户编号与生产的保持一致

--- a/leam/src/main/resources/conf.properties
+++ b/leam/src/main/resources/conf.properties
@@ -1,6 +1,5 @@
-#
-supplierId=NEW2015081701441
-
+#supplierId=NEW2015081701441
+supplierId=2015081701441
 token=http://188.165.92.169/modules/api/v2/getToken/
 skuUrl=http://188.165.92.169/modules/api/v2/stock/
 day=90
