--- a/vela/src/main/resources/conf.properties
+++ b/vela/src/main/resources/conf.properties
@@ -1,5 +1,6 @@
 #
-supplierId=NEW2015071701343
+#supplierId=NEW2015071701343
+supplierId=2015081701443
 url=http://185.58.119.177/velashopapi/Myapi/Productslist/GetAllSeasonCode?DBContext=Default&key=MPm32XJp7M
 #更新库存链接
 day=90
