--- a/coltorti/src/main/resources/conf.properties
+++ b/coltorti/src/main/resources/conf.properties
@@ -1,4 +1,5 @@
 #
 supplierId=2015081701440
-productSupplierId=2015061901300
+#productSupplierId=2015061901300
+productSupplierId=2015081701440
 day=90
