--- a/divo/build.gradle
+++ b/divo/build.gradle
@@ -3,16 +3,8 @@
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
-
-            "net.sf.json-lib:json-lib:2.2:jdk15",
-            "org.apache.poi:poi:3.0.1-FINAL",
-            "com.thoughtworks.xstream:xstream:1.4.7",
-            "commons-net:commons-net:1.4.1",
-            "org.jdom:jdom:2.0.2",
-            "dom4j:dom4j:1.6.1",
             project(':project-common'),
             project(':iog-common-product'),
-
     )
 }
 
@@ -28,7 +20,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.linoricci.StartUp'
+        attributes 'Main-Class': 'com.shangpin.iog.divo.StartUp'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
