--- a/stefaniamode/src/main/resources/conf.properties
+++ b/stefaniamode/src/main/resources/conf.properties
@@ -1,7 +1,6 @@
 #stefaniamode的供应商id=2015092401528
 supplierId=2015092401528
 #需要定期更换应季商品地址
-#zipUrl=http://xmag2014.stefaniamode.it/doc/liste_078.zip,http://xmag2014.stefaniamode.it/doc/liste_077.zip
-url=https://www.stefaniamode.com/feeds/StefaniaMode.xml
+zipUrl=http://xmag2014.stefaniamode.it/doc/liste_078.zip,http://xmag2014.stefaniamode.it/doc/liste_077.zip
 #推迟的天数
 day=90
