--- a/pavinGroup/src/main/resources/conf.properties
+++ b/pavinGroup/src/main/resources/conf.properties
@@ -9,3 +9,5 @@ Spring=http://www.pavingroup.com/it/rss/catalog/category/cid/117/store_id/1/
 Uomo=http://www.pavingroup.com/it/rss/catalog/category/cid/9/store_id/1/
 new1=http://www.pavingroup.com/it/rss/catalog/category/cid/139/store_id/1/
 new2=http://www.pavingroup.com/it/rss/catalog/category/cid/98/store_id/1/
+new3=http://www.pavingroup.com/it/rss/catalog/category/cid/140/store_id/1/
+new4=http://www.pavingroup.com/it/rss/catalog/category/cid/142/store_id/1/
