--- a/inviqa/src/main/resources/conf.properties
+++ b/inviqa/src/main/resources/conf.properties
@@ -1,1 +1,4 @@
 supplierId=2016010601584
+MAGENTO_API_KEY=anr63gksisphqnkcd671nh88egnfqtu3
+MAGENTO_API_SECRET=vhpk60p6srj4qtgbyq7wc3wxe7ybyzv4
+MAGENTO_REST_API_URL=https://glamorous-uat.phplab.co.uk/api/rest
