--- a/ctsiLogistics/build.gradle
+++ b/ctsiLogistics/build.gradle
@@ -1,26 +1,28 @@
 
+
 dependencies {
     compile(
-          "org.jsoup:jsoup:1.8.3",
-            "org.mybatis:mybatis:3.2.2",
-            "org.mybatis:mybatis-spring:1.2.0",
-            "mysql:mysql-connector-java:5.1.21",
+
             "commons-dbcp:commons-dbcp:1.4",
+            "net.sourceforge.javacsv:javacsv:2.0",
             project(':project-common'),
-            project(':project-dao'),
-            project(':iog-common-product'),
-             "com.google.code.gson:gson:2.3.1",
+			  "commons-httpclient:commons-httpclient:3.1",
+            "org.apache.httpcomponents:httpclient:4.1.1",
+			      "commons-net:commons-net:1.4.1",
+			        project(':project-dao'),
+			             project(':iog-service'),
+            project(':iog-common-product')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
 
 }
 
-
-
 jar {
-    dependsOn copyToLib, copyResources
+
+    dependsOn copyToLib , copyResources
     exclude ("**/*.properties")
+
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -28,7 +30,8 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.pavinGroup.StartSkuJob'
+        attributes 'Main-Class': 'com.shangpin.iog.forzieri.StartUp'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
+
 }
