--- a/pavinGroup-stock/build.gradle
+++ b/pavinGroup-stock/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
     compile(
-            "com.google.code.gson:gson:2.3.1",
-               project(':project-common'),
-               project(':openapi-ice')
-           
+    		"org.jsoup:jsoup:1.8.3",
+          project(':project-common'),
+
+            project(':openapi-ice')
     )
 
 }
