--- a/pavinGroup-stock/src/main/resources/conf.properties
+++ b/pavinGroup-stock/src/main/resources/conf.properties
@@ -1,11 +1,2 @@
 supplierId=2015093001569
-Designers=http://www.pavingroup.com/it/rss/catalog/category/cid/52/store_id/1/
-Donna=http://www.pavingroup.com/it/rss/catalog/category/cid/6/store_id/1/
-FlashSale=http://www.pavingroup.com/it/rss/catalog/category/cid/122/store_id/1/
-Highlights=http://www.pavingroup.com/it/rss/catalog/category/cid/92/store_id/1/
-NuoviArrivi=http://www.pavingroup.com/it/rss/catalog/category/cid/123/store_id/1/
-SpecialPrice=http://www.pavingroup.com/it/rss/catalog/category/cid/127/store_id/1/
-Spring=http://www.pavingroup.com/it/rss/catalog/category/cid/117/store_id/1/
-Uomo=http://www.pavingroup.com/it/rss/catalog/category/cid/9/store_id/1/
-new1=http://www.pavingroup.com/it/rss/catalog/category/cid/139/store_id/1/
-new2=http://www.pavingroup.com/it/rss/catalog/category/cid/98/store_id/1/
+uri=http://www.pavingroup.com/it/rss
