修改spinnaker产品对接

--- a/settings.gradle
+++ b/settings.gradle
@@ -44,6 +44,8 @@ include 'coltorti'
 include 'levelgroup-stock'
 
 include 'stefaniamode'
+include 'stefaniamode-stock'
+include 'reebonzWiki'
 
 
 
