--- a/itemInfo-purchase/src/main/resources/conf.properties
+++ b/itemInfo-purchase/src/main/resources/conf.properties
@@ -1,5 +1,16 @@
 #
 supplierId=2015101001588
-key = fb8ea6839b486dba8c5cabb374c03d9d
-jobsSchedule=0/20 * * * * ? 
-  #2015081401432
+supplierNo=S0000519
+
+jobsSchedule=0 0/2 * * * ?
+serviceUrl =http://service.alducadaosta.com/EcSrv/Services.asmx?op=InsertOrder
+sopAction =http://service.alducadaosta.com/EcSrv/InsertOrder
+contentType =text/xml; charset=utf-8
+identifier=Shangpin
+
+startDateOfTemp=
+endDateOfTemp=
+
+fromEmail=chengxu@shangpin.com
+toEmail=jenna.zhao@shangpin.com,
+emailPass=shangpin001
