--- a/Monti-order/src/main/resources/param.properties
+++ b/Monti-order/src/main/resources/param.properties
@@ -11,3 +11,11 @@ dBContext=Default
 key=jAXO6D34vh
 startDateOfTemp=
 endDateOfTemp=
+
+smtpHost=smtp.shangpin.com
+from=chengxu@shangpin.com
+fromUserPassword=shangpin001
+to=lizhongren@shangpin.com,lubaijiang@shangpin.com
+subject=monti order refund
+messageText=
+messageType=text/html;charset\=utf-8
