--- a/meifeng/src/main/resources/conf.properties
+++ b/meifeng/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
-#filepath=/usr/local/app/meifeng/xxx.xsl
-filepath=E:\\20160126.xls
-supplierId=201602031826
+#filepath=/usr/local/app/meifeng/20160126.xsl
+filepath=E:\\20160130.xlsx
+supplierId=2016010801730
 day=90
