--- a/KIX/src/main/resources/log4j.properties
+++ b/KIX/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #root
-log4j.rootLogger=WARN, file
+log4j.rootLogger=WARN, spring
 log4j.appender.spring=org.apache.log4j.ConsoleAppender
 log4j.appender.spring.layout=org.apache.log4j.PatternLayout
 log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
@@ -8,9 +8,9 @@ log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.rootCategory=ERROR, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.Encoding=UTF-8
-log4j.appender.file.File=/usr/local/appstock/log/divo-stock-logs.log
+log4j.appender.file.File=log/atelierostore-logs.log
 log4j.appender.file.Append=true
-log4j.appender.file.MaxFileSize=20MB
+log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=0
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
@@ -23,7 +23,7 @@ log4j.logger.info=INFO, info
 #规定每天产生日志的格式
 log4j.appender.info=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.info.Encoding=UTF-8
-log4j.appender.info.File=usr/local/appstock/log/divo-stock-info.log
+log4j.appender.info.File=log/atelierostore-info.log
 log4j.appender.info.Append=true
 log4j.appender.info.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.info.MaxFileSize=1MB
@@ -38,7 +38,7 @@ log4j.logger.error=ERROR, error
 #规定每天产生日志的格式
 log4j.appender.error=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.error.Encoding=UTF-8
-log4j.appender.error.File=usr/local/appstock/log/divo-stock-error.log
+log4j.appender.error.File=log/atelierostore-error.log
 log4j.appender.error.Append=true
 log4j.appender.error.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.error.MaxFileSize=1MB
