--- a/divo-stock/build.gradle
+++ b/divo-stock/build.gradle
@@ -6,9 +6,8 @@ def propertyPath =    "$buildDir/libs/conf"
 
 dependencies {
     compile(
-       project(':project-common'),
-
-            project(':iog-sop')
+      project(':openapi-ice'),
+      project(':iog-common-product'),
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -19,18 +18,18 @@ jar {
 
     dependsOn copyToLib , copyResources
     exclude ("**/*.properties")
-
-    def manifestCp = configurations.compile.files.collect  {
-
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+//
+//    def manifestCp = configurations.compile.files.collect  {
+//
+//        File file = it
+//        "lib/${file.name}"
+//    }.join(' ')
 
 
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.divo.stock.OstoreStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.divo.stock.DivoStockImp'
 
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+//        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
