--- a/divo/src/main/resources/conf.properties
+++ b/divo/src/main/resources/conf.properties
@@ -1,3 +1,4 @@
-supplierId=201602161408
+#supplierId=201602161408
+supplierId=2016021901775
 url=http://185.5.180.90/ws_sito/ws_sito_p15.asmx/
 day=90
