--- a/meifeng-stock/build.gradle
+++ b/meifeng-stock/build.gradle
@@ -1,13 +1,12 @@
 
 
-
-
-def propertyPath =    "$buildDir/libs/conf"
-
 dependencies {
     compile(
-	 project(':openapi-ice'),
-      project(':iog-common-product'),
+
+            "commons-dbcp:commons-dbcp:1.4",
+            project(':openapi-ice'),
+            project(':iog-common-product'),
+            "commons-net:commons-net:3.3",
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -19,17 +18,15 @@ jar {
     dependsOn copyToLib , copyResources
     exclude ("**/*.properties")
 
+
 //    def manifestCp = configurations.compile.files.collect  {
-//
 //        File file = it
 //        "lib/${file.name}"
 //    }.join(' ')
 
-
-
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.ostore.stock.OstoreStockImp'
-
+        attributes 'Main-Class': 'com.shangpin.iog.meifeng.stock.StockClientImp'
 //        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
+
 }
