--- a/meifeng-stock/src/main/resources/log4j.properties
+++ b/meifeng-stock/src/main/resources/log4j.properties
@@ -8,9 +8,9 @@ log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.rootCategory=ERROR, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.Encoding=UTF-8
-log4j.appender.file.File=/usr/local/appstock/log/divo-stock-logs.log
+log4j.appender.file.File=log/meifeng-stock-logs.log
 log4j.appender.file.Append=true
-log4j.appender.file.MaxFileSize=20MB
+log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.MaxBackupIndex=0
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
@@ -23,7 +23,7 @@ log4j.logger.info=INFO, info
 #规定每天产生日志的格式
 log4j.appender.info=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.info.Encoding=UTF-8
-log4j.appender.info.File=usr/local/appstock/log/divo-stock-info.log
+log4j.appender.info.File=log/meifeng-stock-info.log
 log4j.appender.info.Append=true
 log4j.appender.info.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.info.MaxFileSize=1MB
@@ -38,7 +38,7 @@ log4j.logger.error=ERROR, error
 #规定每天产生日志的格式
 log4j.appender.error=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.error.Encoding=UTF-8
-log4j.appender.error.File=usr/local/appstock/log/divo-stock-error.log
+log4j.appender.error.File=log/meifeng-stock-error.log
 log4j.appender.error.Append=true
 log4j.appender.error.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.error.MaxFileSize=1MB
@@ -49,7 +49,7 @@ log4j.appender.error.layout.ConversionPattern=\r\n--------Start----------\r\n[%-
 log4j.additivity.error=false
 
 #log4j for mongodb
-log4j.logger.mongodb=INFO, MongoDB
+log4j.logger.mongodb=DEBUG, MongoDB
 #org.log4mongo.MongoDbAppender
 log4j.appender.MongoDB=com.shangpin.iog.common.utils.log.mongodb.MyMongoDbAppender
 #mongodb库名
