--- a/Antonacci-stock/build.gradle
+++ b/Antonacci-stock/build.gradle
@@ -26,14 +26,14 @@ jar {
     exclude ("**/*.properties")
 
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+    //def manifestCp = configurations.compile.files.collect  {
+    //    File file = it
+    //    "lib/${file.name}"
+    //}.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.rosi.GrapStock'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        //attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
 }
