--- a/meifeng/build.gradle
+++ b/meifeng/build.gradle
@@ -13,16 +13,16 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib,copyResources
     exclude ("**/*.properties")
 
-//    def manifestCp = configurations.compile.files.collect  {
-//        File file = it
-//        "lib/${file.name}"
-//    }.join(' ')
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.meifeng.StartUp'
-//        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
