--- a/fashionesta/src/main/resources/param.properties
+++ b/fashionesta/src/main/resources/param.properties
@@ -1,4 +1,5 @@
 path=/usr/local/app/fashionesta/fashionesta
 url=http://integration.fashionesta.eu/shangpinmasterdata.csv
 supplierId=2015092901556
+day=90
   #201509281616
