Daniello 修改 部署到香港

--- a/Daniello/src/main/resources/conf.properties
+++ b/Daniello/src/main/resources/conf.properties
@@ -1,3 +1,7 @@
 supplierId=2016011201731
-url=http://79.62.242.6:8088/ws_sito_p15/ws_sito_p15.asmx/
+url=http://79.62.242.6:8088/ws_sito/ws_sito_p15.asmx/
 day=90
+
+user=shangpin
+password=Daniello0203
+
