--- a/Daniello-stock/src/main/resources/conf.properties
+++ b/Daniello-stock/src/main/resources/conf.properties
@@ -1,2 +1,4 @@
 supplierId=2016011201731
-url=http://79.62.242.6:8088/ws_sito_p15/ws_sito_p15.asmx/
+url=http://79.62.242.6:8088/ws_sito/ws_sito_p15.asmx/
+user=shangpin
+password=Daniello0203
