papini增加供货价

--- a/russoCapri/src/main/resources/conf.properties
+++ b/russoCapri/src/main/resources/conf.properties
@@ -1,5 +1,3 @@
-#test
-supplierId=201601201546
-#supplierId=2015113001685
+supplierId=2016030701799
 url=http://82.185.221.164/ws_sito/ws_sito_p15.asmx/
 day=90
