levelgroup合并子产品订单

--- a/levelgroup-purchase/src/main/resources/conf.properties
+++ b/levelgroup-purchase/src/main/resources/conf.properties
@@ -1,5 +1,6 @@
 #
 supplierId=2015092901551
+supplierId2=2015121801705
 supplierNo=S0000743
 #localFile=E:/1.txt
 localFile=/usr/local/apporder/levelgroup/1.txt
