定时发邮件

--- a/hottest/src/main/resources/conf.properties
+++ b/hottest/src/main/resources/conf.properties
@@ -1,3 +1,4 @@
-supplierId=20160303003
+#test 20160303003
+supplierId=2015081001403
 url=http://www.pos123.us/api/v2/products/.json?limit=100&page=
 day=90
