--- a/hottest-stock/src/main/resources/conf.properties
+++ b/hottest-stock/src/main/resources/conf.properties
@@ -1,3 +1,3 @@
-supplierId=20160303003
+supplierId=2015081001403
 url=http://www.pos123.us/api/v2/products/modified/.json?modified-after=&limit=100&page=
 
