alduca加取消订单接口

--- a/itemInfo-purchase/src/main/resources/conf.properties
+++ b/itemInfo-purchase/src/main/resources/conf.properties
@@ -14,3 +14,6 @@ endDateOfTemp=
 fromEmail=chengxu@shangpin.com
 toEmail=jenna.zhao@shangpin.com,
 emailPass=shangpin001
+
+deleteOrderUrl=http://service.alducadaosta.com/EcSrv/Services.asmx?op=DeleteOrder
+deleteOrderSop=http://service.alducadaosta.com/EcSrv/DeleteOrder
