--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
 supplierId=
 sendmailSchedule=0 0 9 * * ?
-filepath=/usr/local/
+filepath=/usr/local/tomcat7/webapps/diffproduct.csv
 
 smtpHost=smtp.shangpin.com
 from=chengxu@shangpin.com
@@ -9,3 +9,13 @@ fromUserPassword=shangpin001
 to=
 subject=\u4EF7\u683C\u53D1\u751F\u53D8\u5316\u7684\u4EA7\u54C1\u5217\u8868
 messageType=text/html;charset\=utf-8
+
+
+
+#######################每天上新产品数量列表#########################################
+dailyUpdateProductSchedule=0 06 8 * * ?
+dailyUpdateProductFilePath=/usr/local/tomcat7/webapps/newproducts.csv
+#收件人列表：多个收件人之间用,隔开
+dailyUpdateProductTo=
+dailyUpdateProductSubject=\u4E0A\u65B0\u4EA7\u54C1\u6570\u91CF\u5217\u8868
+day_of_month=10
