--- a/biondini/build.gradle
+++ b/biondini/build.gradle
@@ -5,7 +5,8 @@ dependencies {
             project(':project-common'),
             project(':iog-service'),
             project(':project-dao'),
-            project(':iog-common-product')
+            project(':iog-common-product'),
+              project(':log-template')
     )
 }
 
