用公共包部署

--- a/Della-stock/src/main/resources/sop.properties
+++ b/Della-stock/src/main/resources/sop.properties
@@ -9,7 +9,7 @@ filepath=E:/lubaijiang/
 
 
 #服务地址
-HOST=@db.SOP.HOST@
+HOST=http://open.shangpin.com:8080
 #supplier key
 APP_KEY=6d7c557b1d9f4167a1faaf434650254f
 #supplier secret
