--- a/theclutcher-stock/src/main/resources/sop.properties
+++ b/theclutcher-stock/src/main/resources/sop.properties
@@ -1,7 +1,5 @@
-
-
 #服务地址
-HOST=@db.SOP.HOST@
+HOST=http://open.shangpin.com:8080
 #supplier key
 APP_KEY=6327ccd73b584d6082955d536ec12690
 #supplier secret
@@ -11,7 +9,4 @@ url=https://www.theclutcher.com/en-US/home/feedShangpin
 
 supplierId=2015102201625
 local.filePath=E\:\\lubaijiang
-
-
-
 
