--- a/Della-stock/src/main/resources/conf.properties
+++ b/Della-stock/src/main/resources/conf.properties
@@ -9,9 +9,8 @@ filepath=E:/lubaijiang/
 
 
 #服务地址
-HOST=@db.SOP.HOST@
+HOST=http://open.shangpin.com:8080
 #supplier key
 APP_KEY=6d7c557b1d9f4167a1faaf434650254f
 #supplier secret
 APP_SECRET =fb005cb6393e485e8dc9e40f72877acd
-
