--- a/Della/build.gradle
+++ b/Della/build.gradle
@@ -15,17 +15,17 @@ dependencies {
 }
 
 jar {
-    dependsOn copyToLib, copyResources, copyResourcesToClasses
+    dependsOn copyToLib, copyResources ,dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+   // def manifestCp = configurations.compile.files.collect  {
+   //     File file = it
+   //     "lib/${file.name}"
+   // }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.della.StartUp'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+       // attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
 }
