--- a/channeladvisor/build.gradle
+++ b/channeladvisor/build.gradle
@@ -18,16 +18,16 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+  //  def manifestCp = configurations.compile.files.collect  {
+  //      File file = it
+  //      "lib/${file.name}"
+  //  }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.channeladvisor.service.Startup'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        //attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
