--- a/itemInfo-stock/src/main/resources/log4j.properties
+++ b/itemInfo-stock/src/main/resources/log4j.properties
@@ -1,16 +1,11 @@
 #root
 log4j.rootLogger=WARN, file
-log4j.appender.spring=org.apache.log4j.ConsoleAppender
-log4j.appender.spring.layout=org.apache.log4j.PatternLayout
-log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
 
-#通用日志配置
-log4j.rootCategory=ERROR, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.Encoding=UTF-8
-log4j.appender.file.File=log/alduca-stock-logs.log
+log4j.appender.file.File=log/alduca-logs.log
 log4j.appender.file.Append=true
-log4j.appender.file.MaxFileSize=1MB
+log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=0
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
@@ -44,7 +39,7 @@ log4j.appender.error.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.error.MaxFileSize=1MB
 #log4j.appender.error.MaxBackupIndex=2
 log4j.appender.error.layout=org.apache.log4j.PatternLayout
-log4j.appender.error.layout.ConversionPattern=\r\n--------Start----------\r\n[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n\r\n----------End---------\r\n
+log4j.appender.error.layout.ConversionPattern=%m%n
 #自定义日志不输入到log4j.rootLogger模式
 log4j.additivity.error=false
 
