--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
 supplierId=
-sendmailSchedule=0 0 9 * * ?
+sendmailSchedule=0 0 12 * * ?
 filepath=/usr/local/tomcat7/webapps/diffproduct.csv
 
 smtpHost=smtp.shangpin.com
@@ -12,10 +12,19 @@ messageType=text/html;charset\=utf-8
 
 
 
-#######################每天上新产品数量列表#########################################
-dailyUpdateProductSchedule=0 06 8 * * ?
+#######################发送每天上新产品数量#########################################
+dailyUpdateProductSchedule=0 30 8 * * ?
 dailyUpdateProductFilePath=/usr/local/tomcat7/webapps/newproducts.csv
 #收件人列表：多个收件人之间用,隔开
 dailyUpdateProductTo=
-dailyUpdateProductSubject=\u4E0A\u65B0\u4EA7\u54C1\u6570\u91CF\u5217\u8868
+dailyUpdateProductSubject=\u9700\u4E0A\u65B0\u4EA7\u54C1\u6570\u91CF\u7EDF\u8BA1
 day_of_month=10
+
+#####################发送每天拉取的新的产品##########################################
+supplierfilePath=/usr/local/tomcat7/webapps/supplierids.txt
+splitSign=,
+goodproduct_Schedule=0 0 16 * * ?
+goodproduct_FilePath=/usr/local/tomcat7/webapps/newFechproducts.csv
+goodproduct_To=
+goodproduct_Subject=\u4ECA\u65E5\u62C9\u53D6\u7684\u65B0\u54C1
+
