levelgroup订单上传失败时发送邮件

--- a/levelgroup-purchase/src/main/resources/conf.properties
+++ b/levelgroup-purchase/src/main/resources/conf.properties
@@ -1,8 +1,6 @@
-#
 supplierId=2015092901551
 supplierId2=2015121801705
 supplierNo=S0000743
-#localFile=E:/1.txt
 localFile=/usr/local/apporder/levelgroup/1.txt
 localFile2=/usr/local/apporder/levelgroup/2.txt
 remoteFile=JanOrder.txt
@@ -16,3 +14,10 @@ jobsSchedule=0 0/2 * * * ?
 upLoadSchedule=0 0 1 * * ? 
 startDateOfTemp=
 endDateOfTemp=
+
+smtpHost=smtp.shangpin.com
+from=chengxu@shangpin.com
+fromUserPassword=shangpin001
+to=dongjinghui@shangpin.com,lizhongren@shangpin.com,zhaoyan@shangpin.com 
+subject=levelgroup\u8BA2\u5355\u4E0A\u4F20\u5931\u8D25
+messageType=text/html;charset\=utf-8
