--- a/openapi-ice/src/main/resources/openice.properties
+++ b/openapi-ice/src/main/resources/openice.properties
@@ -4,4 +4,4 @@ fromEmail=chengxu@shangpin.com
 emailPass=shangpin001
 email=qiujunwei@shangpin.com,lizhongren@shangpin.com
 delay=20
-redisUrl=@redis.url@
+redisUrl=@db.redisUrl@
