--- a/Della-stock/src/main/resources/sop.properties
+++ b/Della-stock/src/main/resources/sop.properties
@@ -14,4 +14,4 @@ HOST=http://open.shangpin.com:8080
 APP_KEY=6d7c557b1d9f4167a1faaf434650254f
 #supplier secret
 APP_SECRET =fb005cb6393e485e8dc9e40f72877acd
-
+local=
