--- a/MengottiOnline/src/main/resources/conf.properties
+++ b/MengottiOnline/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
-supplierId=201603231431
+supplierId=2016032401820
 url=http://mengotti-online.com/media/productsfeed/Shangpin_Mengotti_Ro.csv
 day=90
 local=e\:\\Shangpin_Mengotti_Ro.csv
