--- a/MengottiOnline-stock/src/main/resources/conf.properties
+++ b/MengottiOnline-stock/src/main/resources/conf.properties
@@ -1,3 +1,4 @@
-supplierId=201603231431
+supplierId=2016032401820
 url=http://mengotti-online.com/media/productsfeed/Shangpin_Mengotti_Ro.csv
 local=e\:\\Shangpin_Mengotti_Ro.csv
+jobsSchedule=0 0 0/1 * * ?
