--- a/stefaniamode-stock/src/main/resources/conf.properties
+++ b/stefaniamode-stock/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
-#stefaniamode的供应商id=2015092401528
 supplierId=2015092401528
-#需要定期更换应季商品地址
 url=https://www.stefaniamode.com/feeds/StefaniaMode.xml
+jobsSchedule=45 10 0/1 * * ? 
+time=5400000
