--- a/filippo-stock/src/main/resources/conf.properties
+++ b/filippo-stock/src/main/resources/conf.properties
@@ -5,3 +5,6 @@ url=http://stat.filippomarchesani.net:2060/gw/collect.php/?p=aW5102cn6&nohtml=cs
 
 picurl=http://p.filmar.eu:2060/?
 supplierId=2015102001622
+
+jobsSchedule=30 30 0/1 * * ? 
+time=7200000
