--- a/efashion-stock/src/main/resources/conf.properties
+++ b/efashion-stock/src/main/resources/conf.properties
@@ -2,3 +2,5 @@ supplierId=2015111001657
 url=http://api.gebnegozi.com/api/v2/all/sku/stock.json?storeCode=DW3LT
 max=500
 day=90
+jobsSchedule=30 1 0/1 * * ? 
+time=5400000
