--- a/biondini-stock/build.gradle
+++ b/biondini-stock/build.gradle
@@ -23,7 +23,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.biondini.stock.StockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.biondini.stock.schedule.Startup'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
