--- a/efashion-stock/build.gradle
+++ b/efashion-stock/build.gradle
@@ -19,7 +19,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.efashion.stock.StockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.efashion.stock.schedule.Startup'
         attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
