--- a/forzieri-stock/src/main/resources/conf.properties
+++ b/forzieri-stock/src/main/resources/conf.properties
@@ -19,3 +19,6 @@ tokenurl=https://api.forzieri.com/v2/oauth/token
 #orderurl=https://api.forzieri.com/test/orders
 orderurl=https://api.forzieri.com/v2/orders
 producturl=https://api.forzieri.com/v2/products
+
+jobsSchedule=0 10 0/1 * * ? 
+time=5400000
