--- a/papini-stock/src/main/resources/conf.properties
+++ b/papini-stock/src/main/resources/conf.properties
@@ -1,2 +1,4 @@
 supplierId=2016030401797
 url=http://80.88.89.209/papini/doc/Export_xmlProducer_xiu078.zip
+jobsSchedule=30 25 0/1 * * ? 
+time=5400000
